--- a/Gerenciador.Kelly.Bolos.Bo/Gerenciador.Kelly.Bolos.Bo.csproj
+++ b/Gerenciador.Kelly.Bolos.Bo/Gerenciador.Kelly.Bolos.Bo.csproj
@@ -97,6 +97,7 @@
     <Compile Include="BancoDeDadosClass.cs" />
     <Compile Include="LoginClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabelasClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
